fix: formatting and spacing

--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,6 @@
   background: linear-gradient(rgba(0, 0, 255, 0.5), rgba(0, 0, 255, 0.5)),
     url("./assets/CAPITOL_HEADER.jpg");
   width: 100%;
-  height: 300px;
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -46,7 +45,7 @@
 }
 
 #header-contents {
-  margin: auto 10%;
+  margin: 20px 10%;
   width: 50%;
 }
 
@@ -58,13 +57,6 @@
   cursor: pointer;
 }
 
-#body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: auto 10%;
-}
-
 #knowledge-search {
   height: 60px;
   padding: 5px;
@@ -74,6 +66,7 @@
   display: flex;
   justify-content: space-between;
   gap: 5px;
+  max-width: 500px;
 }
 
 #knowledge-input {
@@ -84,4 +77,11 @@
 
 #knowledge-search-button {
   flex-grow: 0;
+}
+
+#body {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 20px 10%;
 }
